1) Оплата в одной колонке 2) Отчет, множественный фильтр 3) Новые машины должны заноситься. Просто в прошлый раз до 11 знаков номер увеличил, не подумал про регионы тиа 174, теперь сделал до 20- точно все войдет 4) Кнопка счет в заявке, с продукцией пролблем больше нет. 5) Смена статусов по кнопке "архив" +500руб к общему счету. Удалить у админа я все же оставил - непосредственное удаление.

--- a/css/style.css
+++ b/css/style.css
@@ -340,3 +340,10 @@ tr.level_10{
 .menuItem{
 	cursor:pointer;
 }
+
+td[paid="cash"]{
+	background-color:#d2abfb;
+}
+td[paid="bank"]{
+	background-color:#ff9875;
+}
